<resources>
    <string name="app_name">NavyApp</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="label_operative_information">Operative information</string>
    <string name="label_operative_information_short">Operative</string>
    <string name="label_city_routes">City</string>
    <string name="label_suburban_routes">Suburban</string>
    <string name="label_intercity_routes">Intercity</string>
    <string name="label_international_routes">International</string>
    <string name="label_holiday_routes">Holiday</string>

    <string name="label_group_1">Information</string>
    <string name="label_group_2">Routes</string>

    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="action_set_location_1">Location 1</string>
    <string name="action_set_location_2">Location 2</string>
    <string name="ALERT_DIALOG_BUTTON_OK">OK</string>
    <string name="GENERIC_MESSAGE">GENERIC_MESSAGE</string>
    <string name="ERROR_MESSAGE_GPS_FORMAT">Incorrect lat/lon format(#.######)</string>
    <string name="hint_latitude">Latitude</string>
    <string name="hint_longitude">Longitude</string>
    <string name="ALERT_DIALOG_BUTTON_CANCEL">CANCEL</string>
    <string name="ERROR_MESSAGE_LATITUDE_VALUE">Latitude must be [-90, 90]</string>
    <string name="ERROR_MESSAGE_LONGITUDE_VALUE">Longitude must be [-180, 180]</string>
</resources>
