<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvMessage"
        style="@style/customTextViewWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/GENERIC_MESSAGE" />

    <EditText
        android:id="@+id/edtLatitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_latitude" />

    <EditText
        android:id="@+id/edtLongitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_longitude" />

    <!-- style="@style/btnAction" -->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOk"
            style="@style/customButtonMainBlueLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ALERT_DIALOG_BUTTON_OK" />

        <Button
            android:id="@+id/btnCancel"
            style="@style/customButtonMainBlueLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ALERT_DIALOG_BUTTON_CANCEL" />
    </LinearLayout>

</LinearLayout>