<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kelevra.navi.MainActivity">
    <item
        android:id="@+id/action_set_location_1"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="98"
        android:title="@string/action_set_location_1"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_set_location_2"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="99"
        android:title="@string/action_set_location_2"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
</menu>
